<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_ceksurat"
            android:icon="@drawable/ic_menu_ceksurat"
            android:title="@string/menu_ceksurat" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_buatsurat"
            android:icon="@drawable/ic_menu_buatsurat"
            android:title="@string/menu_buatsurat" />
        <item
            android:id="@+id/nav_kirimsurat"
            android:icon="@drawable/ic_menu_kirimsurat"
            android:title="@string/menu_kirimsurat" />

    </group>
</menu>