<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.buatsurat.buatsuratFragment"
    android:background="@mipmap/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <TextView
                android:id="@+id/text_buatsurat"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:text="Buat Surat"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <EditText
                android:id="@+id/TextFieldSurat"
                android:layout_width="420dp"
                android:layout_height="450dp"
                android:background="#ffffff"
                android:textIsSelectable="false"
                tools:text="@string/generate_surat"></EditText>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/button_kembali"
                android:background="#1a1aff">
            </Button>

            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="#1a1aff"
                android:text="@string/button_generate"></Button>

            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#1a1aff"
                android:text="@string/button_reset"></Button>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>