<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@mipmap/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <TextView

                android:id="@+id/text_home"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:text="@string/menu_home"/>

        </RelativeLayout>

        <GridLayout
            android:layout_marginTop="160dp"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16sp"
                    android:gravity="center">
                    <ImageView
                        android:src="@drawable/report"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textSize="13sp"
                        android:text="@string/menu_buatsurat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16sp"
                    android:gravity="center">
                    <ImageView
                        android:src="@drawable/book"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textSize="13sp"
                        android:text="@string/menu_ceksurat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16sp"
                    android:gravity="center">
                    <ImageView
                        android:src="@drawable/envelope"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textSize="13sp"
                        android:text="@string/menu_kirimsurat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16sp"
                    android:gravity="center">
                    <ImageView
                        android:src="@drawable/house"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textSize="13sp"
                        android:text="@string/menu_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>


</LinearLayout>